# oneTri

./: CMakeLists.txt  README.md
assets/shaders/: basic.fs  demo.fs  mandelbrot.fs
src/: main.cpp
src/app/: viewer.cpp  viewer.h  viewer_ui.cpp  viewer_window.cpp
src/core/: app.cpp  app.h  asset_loader.cpp  asset_loader.h  camera.cpp  camera.h  settings.h  shader.cpp  shader.h  window.cpp
